--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
+    "$schema": "https://json.schemastore.org/package.json",
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "development": "node node_modules/laravel-mix/bin/cli.js",
+        "watch": "node node_modules/laravel-mix/bin/cli.js watch",
+        "build": "node node_modules/laravel-mix/bin/cli.js --production"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.27.1",
-        "@popperjs/core": "^2.10.2",
-        "axios": "^1.11.0",
-        "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "@popperjs/core": "^2.11.8",
+        "axios": "^0.21.4",
+        "bootstrap": "^5.3.8",
+        "laravel-mix": "^6.0.49",
+        "lodash": "^4.17.21",
+        "postcss": "^8.5.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "tailwindcss": "^4.1.13"
+        "sass": "^1.92.1",
+        "sass-loader": "^11.1.1"
+    },
+    "dependencies": {
+        "react-router-dom": "^6.22.3"
     }
 }
